src/snapshots/afrotd__parser__tests__rule_html_5.2.7.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            5.2.7 Fouls zwischen den Serien
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Die Strafe für jedes Dead Ball Foul (inklusive Live Ball
                Fouls, die als Dead Ball Fouls behandelt werden), das sich
                ereignet, nachdem eine Serie beendet ist und bevor der Ball das
                nächste Mal spielbereit ist, muss durchgeführt werden, bevor
                die Line to Gain eingerichtet wird.
                </li>
                <li>Jede Strafe für ein Dead Ball Foul, das sich ereignet,
                nachdem der Ball spielbereit ist, muss nach Errichtung der Line
                to Gain durchgeführt werden (A.R. 5.2.7.I bis 5.2.7.V).
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.5.2.7"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
