src/snapshots/afrotd__parser__tests__rule_html_5.2.8.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            5.2.8 Fouls durch beide Teams
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ereignen sich während eines Downs Fouls, die sich aufheben,
                muss der Down wiederholt werden (Ausnahme: Regel 10.1.4
                Ausnahmen) (A.R. 10.1.4.III bis 10.1.4.VII).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.5.2.8"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
