src/snapshots/afrotd__parser__tests__rule_html_6.1.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            6.1.1 Restraining line
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Für jede Free Kick-Formation ist die Restraining Line des
                Kicking Teams die Meterlinie, die sich durch den vordersten
                Punkt des Balles zieht, von dem aus dieser gekickt werden soll.
                Die Restraining Line des Receiving Teams muss 10 Meter von
                diesem Punkt entfernt sein. Soweit sie nicht durch eine Strafe
                verschoben wurde, ist die Restraining Line des Kicking Teams
                bei einem Kickoff die eigene 35-Meterlinie und für einen Free
                Kick nach einem Safety die eigene 20-Meterlinie.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.6.1.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
