src/snapshots/afrotd__parser__tests__rule_html_6.1.12.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            6.1.12 Berechtigung zum Blocken
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Kein Team A-Spieler darf einen Gegner blocken, bis Team A
                berechtigt ist, einen Free Kick zu berühren (A.R. 6.1.3.II).
            </p>
            <p>
                <strong>Strafe: Live Ball Foul. 5 Meter vom Previous Spot oder
                5 Meter von dem Punkt, an dem der anschließende Dead Ball zu
                Team B gehört oder von dem Punkt, an dem der Ball nach einem
                Touchback platziert wird [S19].</strong>
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.6.1.12"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
