src/snapshots/afrotd__parser__tests__rule_html_6.1.3.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            6.1.3 Berühren, illegales Berühren und Recovern eines Free Kicks
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Kein Team A-Spieler darf einen Free Kick berühren, bis:
                    <ol type="1">
                        <li>der Ball einen Team B-Spieler berührt hat
                        (Ausnahme: Regel 6.1.4 und 6.5.1.b); oder
                        </li>
                        <li>der Ball die vertikale Fläche über Team B’s
                        Restraining Line durchbrochen hat und jenseits Team B’s
                        Restraining Line verbleibt (Ausnahme: Regel 6.4.1)
                        (A.R. 2.12.5.I); oder
                        </li>
                        <li>der Ball einen Spieler, den Boden, einen
                        Schiedsrichter oder irgendetwas jenseits Team B’s
                        Restraining Line berührt hat. Danach sind alle Team
                        A-Spieler berechtigt, den Free Kick zu berühren, zu
                        recovern oder zu fangen.
                        </li>
                    </ol>
                </li>
                <li>Jede andere Berührung durch Team A ist ein illegales
                Berühren des Free Kicks. Dies ist eine Violation, die dem
                Receiving Team das Recht gibt, den Ball am Punkt der Violation
                zu übernehmen, wenn er dead ist.
                </li>
                <li>Wird eine Strafe für ein Live Ball Foul, das eines der
                Teams begangen hat, angenommen oder wenn sich Fouls ereignen,
                die sich aufheben, ist das Privileg der illegalen Berührung
                aufgehoben (A.R. 6.1.3.I).
                </li>
                <li>Illegales Berühren in Team A’s Endzone wird ignoriert.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.6.1.3"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
