src/snapshots/afrotd__parser__tests__rule_html_6.1.5.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            6.1.5 Free Kick, der zur Ruhe kommt
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Kommt der Free Kick im Feld zur Ruhe und versucht kein Spieler,
                den Ball zu sichern, wird der Ball dead und gehört zum
                Receiving Team am Dead Ball Spot.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.6.1.5"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
