src/snapshots/afrotd__parser__tests__rule_html_6.1.6.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            6.1.6 Free Kick gefangen oder recovert
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Wird der Free Kick von einem Spieler des Receiving Teams
                gefangen oder recovert, bleibt der Ball im Spiel (Ausnahmen:
                Regeln 4.1.3.g, 6.1.7, 6.5.1 und 6.5.2). Wird der Free Kick von
                einem Spieler des Kicking Teams gefangen oder recovert, wird
                der Ball dead. Der Ball gehört zum Receiving Team am Dead Ball
                Spot, es sei denn, das Kicking Team ist legal in Ballbesitz,
                wenn der Ball für dead erklärt wird. In diesem Fall gehört der
                Ball zum Kicking Team.
                </li>
                <li>Wenn gegnerische Spieler, die jeweils berechtigt sind, den
                Free Kick zu berühren, gleichzeitig einen Kick recovern oder
                fangen, wird der Ball durch den gemeinsamen Ballbesitz dead.
                </li>
                <li>Ein Kick, der in gemeinsamem Ballbesitz für dead erklärt
                wird, wird dem Receiving Team zuerkannt.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.6.1.6"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
